<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >



<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:background="@drawable/bg3"
    android:orientation="vertical">

    <com.ids.markaz.custom.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centered_around_you"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="180dp"
            android:textColor="@color/primary"
            android:textSize="28sp"
            />

    <com.ids.markaz.custom.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary"
            android:textSize="@dimen/very_big_font"
            android:text="@string/our_success_is"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

</LinearLayout>


    <com.ids.markaz.custom.CustomTextViewMedium
        android:layout_width="100dp"
        android:text="@string/lets_start"
        android:textSize="@dimen/small_font"
            android:onClick="skip"
        android:textAllCaps="false"
        android:layout_gravity="center"
            android:textColor="@color/primary"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_rectangular_border_secondary"
        android:layout_height="@dimen/button_height"/>



</LinearLayout>