<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >
    <include layout="@layout/toolbar" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginLeft="@dimen/second_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginRight="@dimen/second_margin"
            android:background="@drawable/rectangular_gray"
            android:orientation="vertical"
            android:padding="@dimen/normal_margin">

        <com.ids.markaz.custom.CustomTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/primary"
                android:textSize="@dimen/big_font"
                android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:layout_marginLeft="@dimen/second_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginRight="@dimen/second_margin"
            android:background="@drawable/rectangular_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/normal_margin">

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/btArabic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:background="@drawable/rectangular_secondary_border"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingEnd="@dimen/big_margin">

                <com.ids.markaz.custom.CustomTextViewMedium
                        android:id="@+id/tvItemTeamAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f_arabic"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/small_font" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/btEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangular_secondary"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/big_margin"
                    android:paddingEnd="@dimen/big_margin">

                <com.ids.markaz.custom.CustomTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f_english"
                        android:textStyle="bold"
                        android:textColor="@color/white_trans"
                        android:textSize="@dimen/small_font" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginLeft="@dimen/second_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:layout_marginRight="@dimen/second_margin"
            android:background="@drawable/rectangular_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/normal_margin">

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificarions"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

        <Switch
                android:id="@+id/swShowNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

    </LinearLayout>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginLeft="@dimen/second_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:layout_marginRight="@dimen/second_margin"
            android:background="@drawable/rectangular_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/normal_margin">

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biometric_login"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

        <Switch
                android:id="@+id/swBiometricLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

    </LinearLayout>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginLeft="@dimen/second_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:layout_marginRight="@dimen/second_margin"
            android:background="@drawable/rectangular_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_currency"
                android:paddingLeft="@dimen/normal_margin"
                android:paddingStart="@dimen/normal_margin"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:padding="@dimen/small_margin"

                android:gravity="end"
                >
            <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"

                    android:layout_gravity="end"
                    android:gravity="end"
                    android:background="@drawable/bg_recangular_border_gray"
                    >


                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/mini_margin"
                        android:layout_marginLeft="@dimen/mini_margin"
                        android:src="@drawable/arrow_down"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:tint="@color/primary"
                        />

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/transparent"
                        android:textSize="@dimen/font"
                        android:id="@+id/spCurrencies"

                        />

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginLeft="@dimen/second_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:layout_marginRight="@dimen/second_margin"
            android:background="@drawable/rectangular_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/normal_margin">

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />

        <com.ids.markaz.custom.CustomTextViewMedium
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="1.5.0"
                android:textColor="@color/primary"
                android:textSize="@dimen/font" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_gravity="end"
            android:gravity="end">
        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btLogout"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/font"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/red"
                android:paddingLeft="@dimen/big_margin"
                android:paddingRight="@dimen/big_margin"

                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                />
    </LinearLayout>


</LinearLayout>